--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios": "^1.6.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
     "sort-by": "^1.2.0",
+    "styled-components": "^6.1.2",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
