--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.2",
+    "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
